[package]
authors = ["LibMake Contributors"]
categories = ["development-tools", "command-line-utilities", "template-engine"]
description = """
A code generator to reduce repetitive tasks and build high-quality Rust
libraries and applications, by providing a simple interface to create
projects, generate code, and manage dependencies.
"""
documentation = "https://docs.rs/libmake"
edition = "2021"
exclude = ["/.git/*", "/.github/*", "/.gitignore", "/.vscode/*"]
homepage = "https://libmake.com"
keywords = [
    'code-generation',
    'generator',
    'library',
    'project-creation',
    'scaffolding',
]
license = "MIT OR Apache-2.0"
name = "libmake"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/libmake.git"
rust-version = "1.75.0"
version = "0.2.2"
include = [
    "/CONTRIBUTING.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/README.md",
    "/src/**",
    "/tests/**",
    "/xtask/**",
]

[workspace]
members = ["xtask"]

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "benchmark"
harness = false
path = "benches/criterion.rs"

[profile.bench]
debug = true

[dependencies]
anyhow = "1.0.81"
assert_cmd = "2.0.14"
clap = "4.5.3"
csv = "1.3.0"
dtt = "0.0.5"
env_logger = "0.11.3"
figlet-rs = "0.1.5"
reqwest = { version = "0.11.26", features = ["blocking"] }
rlg = "0.0.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
tempfile = "3.10.1"
toml = "0.8.11"
vrd = "0.0.6"
xtasks = "0.0.2"
uuid ={ version = "1.7.0", features = ["v4"] }

# Unix platforms use OpenSSL for now to provide SSL functionality
[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }


[dev-dependencies]
criterion = "0.5.1"
predicates = "3.1.0"

[lib]
crate-type = ["lib"]
name = "libmake"
path = "src/lib.rs"
required-features = []

[features]
default = []

# Linting config
[lints.rust]

## Forbid
missing_debug_implementations = "forbid"
missing_docs = "warn"
non_ascii_idents = "forbid"
unreachable_pub = "forbid"
unsafe_code = "forbid"

## Deny
dead_code = "deny"
deprecated_in_future = "deny"
ellipsis_inclusive_range_patterns = "deny"
explicit_outlives_requirements = "deny"
future_incompatible = "deny"
keyword_idents = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_fragment_specifier = "deny"
noop_method_call = "deny"
pointer_structural_match = "deny"
rust_2018_idioms = "deny"
rust_2021_compatibility = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused = "deny"
unused_features = "deny"
unused_import_braces = "deny"
unused_labels = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
variant_size_differences = "deny"

[lints.clippy]

## Allow
blocks_in_conditions = "allow"
cognitive_complexity = "allow"
field_reassign_with_default = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
too_many_arguments = "allow"
type_complexity = "allow"

## Deny
all = "deny"
clone_on_ref_ptr = "deny"
create_dir = "deny"
dbg_macro = "deny"
default_numeric_fallback = "deny"
enum_glob_use = "deny"
expect_used = "deny"
float_cmp_const = "deny"
if_then_some_else_none = "deny"
inline_asm_x86_att_syntax = "deny"
inline_asm_x86_intel_syntax = "deny"
iter_not_returning_iterator = "deny"
large_stack_arrays = "deny"
let_underscore_must_use = "deny"
mem_forget = "deny"
mut_mut = "deny"
mutex_integer = "deny"
nonstandard_macro_braces = "deny"
option_if_let_else = "deny"
panic = "deny"
pedantic = "deny"
range_minus_one = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "deny"
self_named_module_files = "deny"
string_add = "deny"
string_add_assign = "deny"
suspicious_operation_groupings = "deny"
todo = "deny"
trailing_empty_array = "deny"
transmute_ptr_to_ptr = "deny"
unimplemented = "deny"
unnecessary_wraps = "deny"
unneeded_field_pattern = "deny"
unreachable = "deny"
unused_unit = "deny"
unwrap_used = "deny"
use_self = "deny"
used_underscore_binding = "deny"
useless_conversion = "deny"
vec_init_then_push = "deny"
verbose_file_reads = "deny"
wildcard_dependencies = "deny"
wildcard_imports = "deny"

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = "s"
overflow-checks = false
panic = "abort"
rpath = false
strip = "symbols"

[profile.release-low]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
inherits = "release"
lto = "thin"
strip = "symbols"

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false
