[package]
authors = ["LibMake Contributors"]
categories = ["development-tools", "command-line-utilities", "template-engine"]
description = """
A code generator to reduce repetitive tasks and build high-quality Rust
libraries and applications, by providing a simple interface to create
projects, generate code, and manage dependencies.
"""
documentation = "https://docs.rs/libmake"
edition = "2021"
exclude = ["/.git/*", "/.github/*", "/.gitignore", "/.vscode/*"]
homepage = "https://libmake.com"
keywords = [
    'code-generation',
    'generator',
    'library',
    'project-creation',
    'scaffolding',
]
license = "MIT OR Apache-2.0"
name = "libmake"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/libmake.git"
rust-version = "1.75.0"
version = "0.2.2"
include = [
    "/CONTRIBUTING.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/README.md",
    "/src/**",
    "/tests/**",
    "/xtask/**",
]

[workspace]
members = ["xtask"]

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "benchmark"
harness = false
path = "benches/criterion.rs"

[profile.bench]
debug = true

[dependencies]
anyhow = "1.0.81"
assert_cmd = "2.0.14"
clap = "4.5.3"
csv = "1.3.0"
dtt = "0.0.5"
env_logger = "0.11.3"
figlet-rs = "0.1.5"
reqwest = { version = "0.11.26", features = ["blocking"] }
rlg = "0.0.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.33"
tempfile = "3.10.1"
toml = "0.8.12"
uuid = { version = "1.7.0", features = ["v4"] }
vrd = "0.0.6"
xtasks = "0.0.2"

# Unix platforms use OpenSSL for now to provide SSL functionality
[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }

[dev-dependencies]
criterion = "0.5.1"
predicates = "3.1.0"

[lib]
crate-type = ["lib"]
name = "libmake"
path = "src/lib.rs"
required-features = []

[features]
default = []

# Linting config
[lints.rust]

## Forbid
missing_debug_implementations = "forbid"
missing_docs = "warn"
non_ascii_idents = "forbid"
unreachable_pub = "forbid"
unsafe_code = "forbid"

## Deny
dead_code = "deny"
deprecated_in_future = "deny"
ellipsis_inclusive_range_patterns = "deny"
explicit_outlives_requirements = "deny"
future_incompatible = "deny"
keyword_idents = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_fragment_specifier = "deny"
noop_method_call = "deny"
pointer_structural_match = "deny"
rust_2018_idioms = "deny"
rust_2021_compatibility = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused = "deny"
unused_features = "deny"
unused_import_braces = "deny"
unused_labels = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
variant_size_differences = "deny"

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = "s"
overflow-checks = false
panic = "abort"
rpath = false
strip = "symbols"

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false
