[package]
# Metadata about the package.
authors = ["The LibMake (LM) library contributors <contact@libmake.com>"]
build = "build.rs"
categories = ["development-tools", "command-line-utilities", "template-engine"]
description = """
A code generator to reduce repetitive tasks and build high-quality Rust
libraries and applications, by providing a simple interface to create
projects, generate code, and manage dependencies.
"""
documentation = "https://docs.rs/libmake"
edition = "2021"
exclude = [
    "/.git/*",
    "/.github/*",
    "/.gitignore",
    "/.vscode/*"
]
homepage = "https://libmake.com"
include = [
    "/CONTRIBUTING.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/README.md",
    "/src/**",
    "/tests/**",
]
keywords = [
    'code-generation',
    'generator',
    'library',
    'project-creation',
    'scaffolding',
]
license = "MIT OR Apache-2.0"
name = "libmake"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/libmake.git"
rust-version = "1.60"
version = "0.2.6"

[[bench]]
# Benchmarking configuration.
name = "benchmark"
harness = false
path = "benches/criterion.rs"

[profile.bench]
debug = true

[[example]]
# Example configuration.
name = "libmake"
path = "examples/example.rs"

[dependencies]
# The dependencies of the package.
anyhow = "1.0.83"
assert_cmd = "2.0.14"
clap = "4.5.4"
configparser = "3.0.4"
csv = "1.3.0"
dtt = "0.0.6"
env_logger = "0.11.3"
figlet-rs = "0.1.5"
log = {version="0.4.21", features = ["std"] }
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["blocking"] }
rlg = "0.0.4"
serde = { version = "1.0.201", features = ["derive"] }
serde_ini = "0.2.0"
serde_json = "1.0.117"
serde_yml = "0.0.5"
tempfile = "3.10.1"
toml = "0.8.12"
uuid = { version = "1.8.0", features = ["v4"] }
vrd = "0.0.7"

[dev-dependencies]
# The dev-dependencies of the package.
criterion = "0.5.1"
predicates = "3.1.0"

[lib]
# Metadata about the library.
crate-type = ["lib"]
name = "libmake"
path = "src/lib.rs"
required-features = []

[features]
# The features of the package.
default = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

# Linting config
[lints.rust]

## Warn
# box_pointers = "warn"
missing_copy_implementations = "warn"
missing_docs = "warn"
unstable_features = "warn"
# unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_results = "warn"

## Allow
bare_trait_objects = "allow"
elided_lifetimes_in_paths = "allow"
non_camel_case_types = "allow"
non_upper_case_globals = "allow"
trivial_bounds = "allow"
unsafe_code = "allow"

## Forbid
missing_debug_implementations = "forbid"
non_ascii_idents = "forbid"
unreachable_pub = "forbid"

## Deny
dead_code = "deny"
deprecated_in_future = "deny"
ellipsis_inclusive_range_patterns = "deny"
explicit_outlives_requirements = "deny"
future_incompatible = { level = "deny", priority = -1 }
keyword_idents = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_fragment_specifier = "deny"
noop_method_call = "deny"
pointer_structural_match = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused = { level = "deny", priority = -1 }
unused_features = "deny"
unused_import_braces = "deny"
unused_labels = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
variant_size_differences = "deny"

[package.metadata.clippy]
warn-lints = ["clippy::all", "clippy::pedantic", "clippy::cargo", "clippy::nursery"]

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = "s"
overflow-checks = false
panic = "abort"
rpath = false
strip = "symbols"

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false
